# RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
docker/milvus/: docker-compose.yml
docs/: CONFIGURATION_GUIDE.md  DIFY_INTEGRATION_GUIDE.md  OPTIMIZATION_NOTES.md  PROMPT_ENGINEERING.md  SETUP.md
scripts/: check_env.py  run_ingest.sh  run_optimized.sh  run_query.sh  serve_api.sh  setup.sh
src/pcb_rag/: dify_external_api.py  ingest.py  preprocess_docs.py  query.py
