[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb-rag"
version = "0.1.0"
description = "PCB domain retrieval-augmented generation system with Milvus, Ollama, rerank, and Dify integration."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
